--- a/packages/react/src/components/AutomodeControls/AutomodeControls.module.css
+++ b/packages/react/src/components/AutomodeControls/AutomodeControls.module.css
@@ -17,6 +17,7 @@
 .reflct-controls > hr {
   border-color: #000000;
   width: 100%;
+  margin: 0px;
 }
 
 .reflct-controls > .button {
@@ -28,6 +29,8 @@
   background-color: #ffffff;
   border-radius: 8px;
   transition: background-color 0.1s ease-in-out;
+  border: 0px;
+  cursor: pointer;
 }
 
 .reflct-controls > .button:hover {
