--- a/packages/react/src/components/ArrowControls/ArrowControls.module.css
+++ b/packages/react/src/components/ArrowControls/ArrowControls.module.css
@@ -19,16 +19,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 48px;
+  height: 48px;
   padding: 8px;
-  color: #000000;
-  background-color: #ffffff;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.35);
+  border: 1px solid rgba(255, 255, 255, 0.05);
+
+  backdrop-filter: blur(50px);
+
   border-radius: 9999px;
   transition: background-color 0.1s ease-in-out;
   border: 0px;
   cursor: pointer;
 }
 
+.reflct-controls > .button.big {
+  width: 64px;
+  height: 64px;
+}
+
 .reflct-controls > .button:hover {
-  background-color: #ebebeb;
-  color: #000000;
+  background-color: rgba(255, 255, 255, 0.08);
 }
